--- a/cdep/cdep-manifest.yml
+++ b/cdep/cdep-manifest.yml
@@ -2,6 +2,8 @@ coordinate:
   groupId: com.github.jomof
   artifactId: mathfu
   version: ${version}
+license:
+  name: Apache 2.0
 dependencies:
   - compile: com.github.jomof:vectorial:0.0.0-rev19
 archive:
